# ultralytics_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
launch/: yolo_detection_2d.launch  yolo_segmentation_2d.launch
scripts/: train.py
src/: yolo_detection_2d.py  yolo_segmentation_2d.py
